# comfyui_c2pa_signer

./: .gitignore  EXAMPLES.md  LICENSE  QUICK_START.md  README.md  SETUP_GUIDE.md  __init__.py  c2pa_node.py  c2pa_verifier.py  pyproject.toml
.github/workflows/: publish.yml
